DBC22-2680: Fix for cropped unavailable camera placeholder image

--- a/src/frontend/src/Components/map/panels/CamPanel.scss
+++ b/src/frontend/src/Components/map/panels/CamPanel.scss
@@ -126,7 +126,3 @@
     }
   }
 }
-
-.camera-orientations {
-  padding-top: 0.61rem !important;
-}
