--- a/src/frontend/src/pages/CameraDetailsPage.scss
+++ b/src/frontend/src/pages/CameraDetailsPage.scss
@@ -264,6 +264,7 @@
           position: relative;
 
           .card-img-box {
+            height: 388px;
 
             &.unavailable {
               background-color: $Surface-status-red;
@@ -276,7 +277,7 @@
 
             img {
               width: 100%;
-              height: 381px;
+              height: 388px;
               object-fit: cover;
 
               &.image-gallery-image {
